<resources>
    <string name="app_name">Connect 4</string>
    <string name="menu_button1">Empezar partida</string>
    <string name="menu_button2">Reglas del juego</string>
    <string name="menu_button3">Salir</string>
    <string name="ayuda_button1">Ir al menu</string>
    <string name="ayuda_text1">Reglas del juego</string>
    <string name="ayuda_text2">El objetivo de Connect 4 es alinear cuatro fichas sobre un tablero.</string>
    <string name="ayuda_text3">Cada jugador dispone de 21 fichas de un color.​ Por turnos, los jugadores deben introducir una ficha en la columna que prefieran (siempre que no esté completa) y ésta caerá a la posición más baja.</string>
    <string name="ayuda_text4">Gana la partida el primero que consiga alinear cuatro fichas consecutivas de un mismo color en horizontal, vertical o diagonal.​ Si todas las columnas están llenas pero nadie ha hecho una fila válida, hay empate.</string>
    <string name="options_text1">Opciones del juego</string>
    <string name="options_text2">Apodo</string>
    <string name="options_input1">Introduce tu apodo</string>
    <string name="options_text3">Tamaño del tablero</string>
    <string name="options_group1">7x7</string>
    <string name="options_group2">6x6</string>
    <string name="options_group3">5x5</string>
    <string name="options_switch1">Temporizador</string>
    <string name="options_button1">Empezar la partida!</string>
    <string name="game_text1">Temporizador</string>
    <string name="game_text2">Turno</string>
    <string name="result_text1">Resultado de la partida</string>
    <string name="result_text2">Dia y hora</string>
    <string name="result_text3">Valores del Log</string>
    <string name="result_text4">Email del destinatario</string>
    <string name="result_btn1"> Enviar e-mail</string>
    <string name="result_btn2"> Nueva partida</string>
    <string name="result_btn3"> Salir</string>
    <string name="result_text5">Introducir fecha i hora</string>
    <string name="result_text6">Introducir alias...</string>
    <string name="result_text7">Introducir e-mail</string>
    <string name="log_text1">Contenido del log</string>
    <string name="nickname_error">Tienes que introducir un nickname!</string>
    <string name="intent_options_nickname">nickname</string>
    <string name="intent_options_timer">timer_status</string>
    <string name="intent_options_size">board_size</string>
    <string name="intent_game_nickname">nickname</string>
    <string name="intent_game_size">board_size</string>
    <string name="intent_game_timestatus">time_status</string>
    <string name="intent_game_timevalue">time_value</string>
    <string name="intent_game_result">result</string>
    <string name="menu_button4">Consultar partidas</string>
    <string name="db_button1">Ir al menu</string>
    <string name="detail_button1">Volver</string>
    <string name="db_text1">Partidas guardadas</string>
    <string name="detail_text1">Detalles partida</string>
</resources>